Added grid to gw-stop.component

--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
@@ -8,7 +8,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<div position="center">
+<ion-grid>
   <ion-card>
     <ion-card-content>
       Somebody once told me the world is gonna roll me I ain't the sharpest tool
@@ -23,4 +23,4 @@
       gold Only shooting stars break the mold...
     </ion-card-content>
   </ion-card>
-</div>
+</ion-grid>
