sign-Modal design stuff

--- a/src/app/pages/gw-tour/gw-stops/gw-stop-viewer/gw-stop-viewer.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop-viewer/gw-stop-viewer.component.html
@@ -1,5 +1,5 @@
-<ion-header no-border>
-    <ion-toolbar>
+<ion-header>
+    <ion-toolbar color="light">
       <ion-buttons slot="primary">
         <ion-button (click)="close()" color="light">
           <ion-icon slot="icon-only" name="close"></ion-icon>
