--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
@@ -1,15 +1,17 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Poop</ion-title>
+<ion-header no-border>
+  <ion-toolbar >
     <ion-buttons slot="end">
       <ion-button (click)="dismiss()">
-        <ion-icon slot="icon-only" name="close"></ion-icon>
+        <ion-icon color="light" slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-grid>
   <ion-card>
+    <ion-card-header>
+        <ion-card-title text-center> Poop </ion-card-title>
+    </ion-card-header>
     <ion-card-content>
       Somebody once told me the world is gonna roll me I ain't the sharpest tool
       in the shed She was looking kind of dumb with her finger and her thumb In
