--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
@@ -1,5 +1,5 @@
 <ion-header no-border>
-  <ion-toolbar >
+  <ion-toolbar>
     <ion-buttons slot="end">
       <ion-button (click)="dismiss()">
         <ion-icon color="light" slot="icon-only" name="close"></ion-icon>
@@ -9,20 +9,12 @@
 </ion-header>
 <ion-grid>
   <ion-card>
+    <img [src]="stop.img" />
     <ion-card-header>
-        <ion-card-title text-center> Poop </ion-card-title>
+        <ion-card-title> {{stop.title}} </ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      Somebody once told me the world is gonna roll me I ain't the sharpest tool
-      in the shed She was looking kind of dumb with her finger and her thumb In
-      the shape of an "L" on her forehead Well the years start coming and they
-      don't stop coming Fed to the rules and I hit the ground running Didn't
-      make sense not to live for fun Your brain gets smart but your head gets
-      dumb So much to do, so much to see So what's wrong with taking the back
-      streets? You'll never know if you don't go You'll never shine if you don't
-      glow Hey now, you're an all-star, get your game on, go play Hey now,
-      you're a rock star, get the show on, get paid And all that glitters is
-      gold Only shooting stars break the mold...
+      {{stop.info}}
     </ion-card-content>
   </ion-card>
 </ion-grid>
