Removed dev banner because it was problematic. Moved PWA prompt into its own component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,68 +1,4 @@
 <ion-app>
-  <div id="prompt-container" class="prompt-container">
-    <div class="shade">
-    </div>
-    <ng-container *ngIf="platform.is('android')">
-      <ion-slides pager="true" class="slides">
-        <ion-slide>
-          <div class="slide">
-            Android slide 1
-          </div>
-        </ion-slide>
-        <ion-slide>
-          <div class="slide">
-            Android slide 2
-          </div>
-        </ion-slide>
-        <ion-slide>
-          <div class="slide">
-            Android slide 3
-          </div>
-        </ion-slide>
-        <ion-slide>
-          <div class="slide">
-            Android slide 4
-          </div>
-        </ion-slide>
-        <ion-slide>
-          <div class="slide">
-            Android slide 5
-          </div>
-        </ion-slide>
-      </ion-slides>
-    </ng-container>
-    <ng-container *ngIf="platform.is('ios')">
-      <ion-slides class="slides">
-        <ion-slide>
-          <div class="slide">
-            iOS slide 1
-          </div>
-        </ion-slide>
-        <ion-slide>
-          <div class="slide">
-            iOS slide 2
-          </div>
-        </ion-slide>
-        <ion-slide>
-          <div class="slide">
-            iOS slide 3
-          </div>
-        </ion-slide>
-        <ion-slide>
-          <div class="slide">
-            iOS slide 4
-          </div>
-        </ion-slide>
-        <ion-slide>
-          <div class="slide">
-            iOS slide 5
-          </div>
-        </ion-slide>
-      </ion-slides>
-    </ng-container>
-  </div>
-  <div class="dev-banner" *ngIf="!prod">
-    Development Build
-  </div>
-  <ion-router-outlet [ngClass]="prod ? '' : 'dev-router'"></ion-router-outlet>
+  <tc-pwa-prompt></tc-pwa-prompt>
+  <ion-router-outlet></ion-router-outlet>
 </ion-app>
