--- a/src/app/pwa-prompt/pwa-prompt.component.scss
+++ b/src/app/pwa-prompt/pwa-prompt.component.scss
@@ -20,13 +20,13 @@ div.shade {
 ion-button.close-button {
   position: absolute;
   top: 15vh;
-  right: 8vw;
+  right: 6vw;
 }
 
 ion-slides.slides {
   position: absolute;
-  top: 20%;
-  bottom: 35%;
+  top: 25%;
+  bottom: 40%;
   left: 0;
   right: 0;
   --bullet-background: var(--ion-color-primary);
@@ -34,11 +34,36 @@ ion-slides.slides {
 }
 
 ion-slide.slide {
-  div {
-    border-radius: 5%;
+  div.slide-positioning-container {
+    position: relative;
+    span {
+      position: absolute;
+      top: 5%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      font-size: medium;
+      padding-left: 5%;
+      padding-right: 5%;
+    }
+    div.button-container {
+      position: absolute;
+      bottom: 12%;
+      left: 5%;
+      right: 5%;
+      display: flex;
+      flex-direction: row;
+      margin: 0 !important;
+      padding-top: 20px;
+      ion-button.slider-nav {
+        flex-grow: 1;
+        flex-basis: 50%;
+        padding: 2px;
+      }
+    }
+    border-radius: 1em;
     margin-left: 10%;
     margin-right: 10%;
-    padding-top: 50%;
     width: 100%;
     height: 100%;
     background-color: white;
