Added "Google Chrome Recommended" disclaimer for Android PWA installation.

--- a/src/app/pwa-prompt/pwa-prompt.component.html
+++ b/src/app/pwa-prompt/pwa-prompt.component.html
@@ -12,6 +12,8 @@
             <ion-img src="assets/img/android_pwa_0.jpg"></ion-img>
             <br>
             Tap "Add TurtleCove to Home Screen" at the bottom of your screen.
+            <br>
+            <div style="color: gray; font-size: 0.8em; padding-top: 1.5em; width: 80%; margin: auto;">The Google Chrome App is recommended for best results.</div>
           </span>
           <div class="button-container">
             <ion-button (click)="slider.slidePrev()" size="small" class="slider-nav" style="visibility: hidden;">
@@ -29,6 +31,8 @@
             <ion-img src="assets/img/android_pwa_1.jpg"></ion-img>
             <br>
             Tap "Add" on the next screen to install the Turtle Cove app.
+            <br>
+            <!-- <span style="color: gray; font-size: 0.5em;">The Google Chrome App is recommended for best results.</span> -->
           </span>
           <div class="button-container">
             <ion-button (click)="slider.slidePrev()" size="small" class="slider-nav">
