--- a/src/app/pwa-prompt/pwa-prompt.component.scss
+++ b/src/app/pwa-prompt/pwa-prompt.component.scss
@@ -36,7 +36,7 @@ ion-slides.slides {
 ion-slide.slide {
   div.slide-positioning-container {
     position: relative;
-    span {
+    > span {
       position: absolute;
       top: 5%;
       left: 50%;
