Moved Chrome disclaimer CSS into SCSS file instead of inline.

--- a/src/app/pwa-prompt/pwa-prompt.component.html
+++ b/src/app/pwa-prompt/pwa-prompt.component.html
@@ -13,7 +13,9 @@
             <br>
             Tap "Add TurtleCove to Home Screen" at the bottom of your screen.
             <br>
-            <div style="color: gray; font-size: 0.8em; padding-top: 1.5em; width: 80%; margin: auto;">The Google Chrome App is recommended for best results.</div>
+            <div class="chrome-disclaimer">
+              The Google Chrome App is recommended for best results.
+            </div>
           </span>
           <div class="button-container">
             <ion-button (click)="slider.slidePrev()" size="small" class="slider-nav" style="visibility: hidden;">
