--- a/src/app/pages/gw-tour/gw-tour.page.html
+++ b/src/app/pages/gw-tour/gw-tour.page.html
@@ -1,15 +1,17 @@
 <tc-header pageName="Greenway Tour"></tc-header>
 
 <ion-content>
+  <!--
   <ion-grid>
     <ion-row>
       <ion-col>
         <div class="coords">
-          {{ plugins.location[0] }}, {{ plugins.location[1] }}
+           {{ plugins.location[0] }}, {{ plugins.location[1] }} 
         </div>
       </ion-col>
     </ion-row>
   </ion-grid>
+   -->
   <ion-grid>
     <ion-row>
       <ion-col>
@@ -20,22 +22,15 @@
             <ion-card-title>Greenway</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-                Somebody once told me the world is gonna roll me
-                I ain't the sharpest tool in the shed
-                She was looking kind of dumb with her finger and her thumb
-                In the shape of an "L" on her forehead
-                Well the years start coming and they don't stop coming
-                Fed to the rules and I hit the ground running
-                Didn't make sense not to live for fun
-                Your brain gets smart but your head gets dumb
-                So much to do, so much to see
-                So what's wrong with taking the back streets?
-                You'll never know if you don't go
-                You'll never shine if you don't glow
-                Hey now, you're an all-star, get your game on, go play
-                Hey now, you're a rock star, get the show on, get paid
-                And all that glitters is gold
-                Only shooting stars break the mold...
+              The Manchac Greenway provides the general public a look inside the natural
+              environment of Louisiana’s robust marsh and swamp ecosystems. Despite already having
+              maintained trails that are open to public access, most people are either unaware or unmotivated
+              to utilize this area on their own. By hosting tours under the guidance of biologists trained in the
+              Manchac ecosystems, we can attract more attention to these underappreciated areas and educate
+              the local communities about their own surrounding habitat. This also provides a fundraising
+              opportunity for eligible biology graduate students and qualified undergraduates at Southeastern
+              Louisiana University, as well as partnering groups who already support the Greenway and will
+              assist in its further development in the future.
           </ion-card-content>
         </ion-card>
       </ion-col>
