--- a/src/app/shared/pwa-prompt/pwa-prompt.component.scss
+++ b/src/app/shared/pwa-prompt/pwa-prompt.component.scss
@@ -17,10 +17,28 @@ div.shade {
   width: 100%;
 }
 
-ion-button.close-button {
+ion-button.md-close-button {
   position: absolute;
-  top: 15vh;
-  right: 6vw;
+  top: 20vh;
+  right: 8vw;
+  height: 2em;
+  width: 2em;
+  ion-icon {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+ion-button.ios-close-button {
+  position: absolute;
+  top: 20vh;
+  right: 8vw;
+  height: 2.5em;
+  width: 2.5em;
+  ion-icon {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 ion-slides.slides {
@@ -33,46 +51,101 @@ ion-slides.slides {
   --bullet-background-active: var(--ion-color-secondary);
 }
 
-ion-slide.slide {
-  div.slide-positioning-container {
-    position: relative;
-    > span {
-      position: absolute;
-      top: 5%;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100%;
-      font-size: medium;
-      padding-left: 5%;
-      padding-right: 5%;
-      .chrome-disclaimer {
-        color: gray;
-        font-size: 0.8em;
-        padding-top: 1.5em;
-        width: 80%;
-        margin: auto;
-      }
-    }
-    div.button-container {
-      position: absolute;
-      bottom: 12%;
-      left: 5%;
-      right: 5%;
-      display: flex;
-      flex-direction: row;
-      margin: 0 !important;
-      padding-top: 20px;
-      ion-button.slider-nav {
-        flex-grow: 1;
-        flex-basis: 50%;
-        padding: 2px;
-      }
-    }
-    border-radius: 1em;
-    margin-left: 10%;
-    margin-right: 10%;
-    width: 100%;
-    height: 100%;
-    background-color: white;
+div.ios-inner-slide {
+  position: absolute;
+  top: 25%;
+  bottom: 40%;
+  border-radius: 1em;
+  left: 10%;
+  right: 10%;
+  background-color: white;
+}
+
+div.md-inner-slide {
+  position: relative;
+  border-radius: 1em;
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+
+div.nav-button-container {
+  position: absolute;
+  bottom: 12%;
+  left: 5%;
+  right: 5%;
+  display: flex;
+  flex-direction: row;
+  margin: 0 !important;
+  padding-top: 20px;
+  ion-button.slider-nav {
+    flex-grow: 1;
+    flex-basis: 50%;
+    padding: 2px;
   }
 }
+
+span.install-instructions {
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  font-size: medium;
+  padding-left: 5%;
+  padding-right: 5%;
+  text-align: center;
+  .chrome-disclaimer {
+    color: gray;
+    font-size: 0.8em;
+    padding-top: 1.5em;
+    width: 80%;
+    margin: auto;
+  }
+}
+
+// ion-slide.slide {
+//   div.slide-positioning-container {
+//     position: relative;
+//     > span {
+//       position: absolute;
+//       top: 5%;
+//       left: 50%;
+//       transform: translateX(-50%);
+//       width: 100%;
+//       font-size: medium;
+//       padding-left: 5%;
+//       padding-right: 5%;
+//       .chrome-disclaimer {
+//         color: gray;
+//         font-size: 0.8em;
+//         padding-top: 1.5em;
+//         width: 80%;
+//         margin: auto;
+//       }
+//     }
+//     div.button-container {
+//       position: absolute;
+//       bottom: 12%;
+//       left: 5%;
+//       right: 5%;
+//       display: flex;
+//       flex-direction: row;
+//       margin: 0 !important;
+//       padding-top: 20px;
+//       ion-button.slider-nav {
+//         flex-grow: 1;
+//         flex-basis: 50%;
+//         padding: 2px;
+//       }
+//     }
+//     border-radius: 1em;
+//     margin-left: 10%;
+//     margin-right: 10%;
+//     width: 100%;
+//     height: 100%;
+//     background-color: white;
+//   }
+// }
