--- a/src/app/pages/gw-tour/gw-tour.page.html
+++ b/src/app/pages/gw-tour/gw-tour.page.html
@@ -39,7 +39,7 @@
     <ion-row>
       <ion-col>
         <div style="display: flex; flex-direction: row;">
-          <ion-button >
+          <ion-button (click)="presentToastWithOptions()" >
             <ion-icon name="car"></ion-icon>
             <span>Take the Tour</span>
           </ion-button >
