Got scroll area in card working.

--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
@@ -7,15 +7,12 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-card style="height: 100%;">
+<ion-card>
   <img [src]="stop.img" />
   <ion-card-header>
     <ion-card-title> {{ stop.title }} </ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    <div style="overflow: scroll; display: inline-block;">
-      Stuff
-      {{ stop.info }}
-    </div>
+    {{ stop.info }}
   </ion-card-content>
 </ion-card>
