--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.scss
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.scss
@@ -1,8 +1,18 @@
 ion-toolbar {
-    --background: transparent;
+  --background: transparent;
 }
 
 ion-content {
-    --background: transparent;
+  --background: transparent;
 }
 
+ion-card {
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+}
+
+ion-card-content {
+  flex: 1 1 auto;
+  overflow: scroll;
+}
