gw stop styling change

--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
@@ -15,4 +15,5 @@
   <ion-card-content>
     {{ stop.info }}
   </ion-card-content>
+  <ion-button style="margin: 10px 15px;">Take me there!</ion-button>
 </ion-card>
