--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.scss
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.scss
@@ -7,13 +7,16 @@ ion-content {
 }
 
 ion-card {
-  height: 100%;
   display: flex;
   flex-flow: column;
   margin-top: 12px;
+  margin-bottom: auto;
+  max-height: 90%;
 }
 
 ion-card-content {
   flex: 1 1 auto;
   overflow: scroll;
+  padding-top: 0;
+  padding-bottom: 0;
 }
