Stops card styling (#35)
* Stuff

* Got scroll area in card working.

* Lessened margin above card.

* Removed unused component import.

* gw stop styling change

--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.scss
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.scss
@@ -1,8 +1,22 @@
 ion-toolbar {
-    --background: transparent;
+  --background: transparent;
 }
 
 ion-content {
-    --background: transparent;
+  --background: transparent;
 }
 
+ion-card {
+  display: flex;
+  flex-flow: column;
+  margin-top: 12px;
+  margin-bottom: auto;
+  max-height: 90%;
+}
+
+ion-card-content {
+  flex: 1 1 auto;
+  overflow: scroll;
+  padding-top: 0;
+  padding-bottom: 0;
+}
