--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
@@ -7,18 +7,13 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content>
-  <ion-grid>
-    <div>
-      <ion-card>
-        <img [src]="stop.img" />
-        <ion-card-header>
-          <ion-card-title> {{ stop.title }} </ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          {{ stop.info }}
-        </ion-card-content>
-      </ion-card>
-    </div>
-  </ion-grid>
-</ion-content>
+<ion-card>
+  <img [src]="stop.img" />
+  <ion-card-header>
+    <ion-card-title> {{ stop.title }} </ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    {{ stop.info }}
+  </ion-card-content>
+  <ion-button style="margin: 10px 15px;">Take me there!</ion-button>
+</ion-card>
