Added "not open to the public" note to the about page. Fixed card styling to be a bit more consistent between iOS and Android.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,7 +4,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-card>
+        <ion-card style="margin-bottom: 0;">
           <img src="assets/img/turtle-cove.jpg" />
           <ion-card-header>
             <ion-card-subtitle>Manchac, LA</ion-card-subtitle>
@@ -39,7 +39,7 @@
     <ion-row>
       <ion-col>
         <div style="display: flex; flex-direction: row;">
-          <ion-button color="secondary" (click)="openUrl('https://www.southeastern.edu/alumni_donors/foundation/giving/tutlecove/index.html')">
+          <ion-button style="margin-top: 0;" color="secondary" (click)="openUrl('https://www.southeastern.edu/alumni_donors/foundation/giving/tutlecove/index.html')">
               Support Us!
           </ion-button>
         </div>
