--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -98,6 +98,11 @@
       </ion-card-title>
     </ion-card-header>
     <ion-card-content>
+      Facility is not open to the public.
+      <br>
+      Please contact Dr. Robert Moreau to schedule a group tour.
+      <br>
+      <br>
       Turtle Cove Environmental Research Station Box 10585 Hammond, LA 70402
     </ion-card-content>
     <ion-card-content>
