--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -6,3 +6,15 @@ ion-button {
     padding-right: 0.5em;
   }
 }
+
+ion-card {
+  ion-card-header {
+    padding: 10px 25px 5px 25px;
+    ion-card-title {
+      margin: 5px 0 0 0;
+    }
+  }
+  ion-card-content {
+    padding-top: 5px !important;
+  }
+}
