Updated GW-Stop card styling to be a little more adaptive to screen size.

--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.scss
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.scss
@@ -3,20 +3,21 @@ ion-toolbar {
 }
 
 ion-content {
-  --background: transparent;
+  --background: rgba(44, 39, 45, 0.84);
+  // --background: transparent;
 }
 
 ion-card {
   display: flex;
   flex-flow: column;
-  margin-top: 12px;
+  margin-top: 0;
   margin-bottom: auto;
-  max-height: 90%;
+  max-height: calc(100% - 10px);
 }
 
 ion-card-content {
   flex: 1 1 auto;
-  overflow: scroll;
+  overflow-y: scroll;
   padding-top: 0;
   padding-bottom: 0;
 }
