Added Changes from Meeting with Dr. Moreau

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,7 +16,8 @@
             understanding of Southeast Louisiana's coastal wetland environments
             through research, education, and public outreach activities and
             programs for Southeastern's students, faculty and staff as well as
-            the greater University community.
+            the greater University community. For a 20 minute video on Turtle Cove and 
+            its surrounding ecosystem, please watch our video "Troubled Waters" below.
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -25,9 +26,9 @@
     <ion-row>
       <ion-col>
         <div style="display: flex; flex-direction: row;">
-          <ion-button routerLink="/events">
-            <ion-icon name="calendar"></ion-icon>
-            <span>Events</span>
+          <ion-button (click)="openUrl('http://www.southeastern.edu/acad_research/programs/turtle_cove/index.html')">
+            <ion-icon name="desktop"></ion-icon>
+            <span>Our Website</span>
           </ion-button>
           <ion-button (click)="openUrl('https://www.youtube-nocookie.com/embed/iqhW54bWwnw')">
             <ion-icon name="film"></ion-icon>
