All Stops Now Route User to Respective Locations

--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
@@ -16,6 +16,6 @@
     <ion-card-content>
       {{ stop.info }}
     </ion-card-content>
-    <ion-button style="margin: 10px 15px;">Take me there!</ion-button>
+    <ion-button [href]='this.address' target="_blank" style="margin: 10px 15px;">Take me there!</ion-button>
   </ion-card>
 </ion-content>
