--- a/src/app/pages/tc-tour/tc-tour.page.scss
+++ b/src/app/pages/tc-tour/tc-tour.page.scss
@@ -1,60 +1,71 @@
 ion-button {
-    flex-grow: 1;
-    flex-basis: 50%;
-    padding: 2px;
+  flex-grow: 1;
+  flex-basis: 50%;
+  padding: 2px;
+}
+
+.tc-tour-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.signs-container {
+  flex: 1 1 auto;
+  overflow: scroll;
 }
 
 .sign-button {
-    height: 100%;
-    background-color: white;
+  height: 100%;
+  background-color: white;
+  position: relative;
+  border-radius: 15px;
+  // border-width: 2.5px;
+  // border-color: black;
+  // border-style: solid;
+  overflow: hidden;
+  // box-shadow: 2px 4px 10px grey;
+  img {
+    filter: blur(5px);
     position: relative;
-    border-radius: 15px;
-    // border-width: 2.5px;
-    // border-color: black;
-    // border-style: solid;
-    overflow: hidden;
-    // box-shadow: 2px 4px 10px grey;
-    img {
-        filter: blur(5px);
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-    div {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 2;
-    }
-    ion-label {
-        font-size: 36pt;
-        font-weight: 900;
-        font-family: "Comic Sans MS", sans-serif;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 3;
-    }
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
+  ion-label {
+    font-size: 36pt;
+    font-weight: 900;
+    font-family: "Comic Sans MS", sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+  }
 }
 
 .unviewed {
-    box-shadow: 2px 4px 8px darkgray;
-    div {
-        background-color: rgba(0, 0, 0, 0);
-    }
-    ion-label {
-        color: black;
-    }
+  box-shadow: 2px 4px 8px darkgray;
+  div {
+    background-color: rgba(0, 0, 0, 0);
+  }
+  ion-label {
+    color: black;
+  }
 }
 
 .viewed {
-    div {
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-    ion-label {
-        color: white;
-    }
+  div {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  ion-label {
+    color: white;
+  }
 }
