--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -115,5 +115,6 @@
       Cell: (504)231-1067
     </ion-card-content>
   </ion-card>
-  <div style="text-align: center; width: 100%; color: gray; padding-bottom: 1%;">Turtle icon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+  <div style="text-align: center; width: 100%; color: gray; padding-bottom: 5px;">Turtle icon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+  <div style="text-align: center; width: 85%; margin: auto; color: gray; padding-bottom: 5px;">The Turtle Cove Companion App was devloped by Phillip Weaver and Zachary Armand</div>
 </ion-content>
