Made checklist controls sticky to the top of the page.

--- a/src/global.scss
+++ b/src/global.scss
@@ -32,3 +32,14 @@ ion-card {
     background: transparent !important;
   }
 }
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.scroll-container {
+  flex: 1 1 auto;
+  overflow-y: scroll;
+}
