--- a/src/app/pages/checklist/checklist.page.html
+++ b/src/app/pages/checklist/checklist.page.html
@@ -1,19 +1,19 @@
 <tc-header [pageName]="'Species Checklist'"></tc-header>
 
 <ion-content>
-  <!-- <ion-header translucent>
+  <div class="content-container">
+    <!-- <ion-header translucent>
     <ion-toolbar>
       <ion-title>Species Checklist</ion-title>
     </ion-toolbar>
   </ion-header> -->
-  <div style="padding-top: 10px; margin: auto; width: 100%; display: flex; justify-content: center;">
-    <ion-chip color="primary" style="text-align: center;">
-      <ion-label>
-        {{ totalFound }} / {{ total }} Species Found
-      </ion-label>
-    </ion-chip>
-  </div>
-  <ion-item-group>
+    <div style="padding-top: 10px; margin: auto; width: 100%; display: flex; justify-content: center;">
+      <ion-chip color="primary" style="text-align: center;">
+        <ion-label>
+          {{ totalFound }} / {{ total }} Species Found
+        </ion-label>
+      </ion-chip>
+    </div>
     <div style="display: flex; align-content: center; width: 100%;">
       <ion-button class="top-button" color="secondary" (click)="toggleExpandAll()">
         <ion-icon slot="start" size="large" [attr.name]="!anyExpanded ? 'add' : 'remove'" mode="ios"></ion-icon>
@@ -23,34 +23,46 @@
         Reset All
       </ion-button>
     </div>
-    <ng-container *ngFor="let obj of speciesClass; let i = index">
-      <ion-item-divider no-padding mode="ios" sticky style="background-color: gray; color: white; height: 40px;" (click)="toggleClass(obj)">
-        <div style="width: 100%; height: 2px; background-color: black; position: absolute; top: 0; left: 0;" *ngIf="i > 0"></div>
-        <ion-button class="ion-no-padding" slot="start" fill="clear" size="small" color="light">
-            <ion-icon slot="icon-only" size="large" [attr.name]="!obj.expanded ? 'add' : 'remove'" mode="ios"></ion-icon>
-        </ion-button>
-        {{ obj.className }}
-        <ion-chip slot="end">
-          <ion-label color="light">
-            {{ obj.found }} / {{ obj.species.length }}
-          </ion-label>
-        </ion-chip>
-      </ion-item-divider>
-      <ng-container *ngFor="let letter of alphabet">
-        <ion-item-group *ngIf="obj.expanded && (obj.species | filterSpeciesByNameStartsWith : letter)">
-          <ion-item-divider style="background-color: lightgray; z-index: 0;" mode="ios">{{ letter }}</ion-item-divider>
-          <ng-container *ngFor="let species of (obj.species | filterSpeciesByNameStartsWith : letter); let j = index">
-            <ion-item [attr.lines]="(j == (obj.species | filterSpeciesByNameStartsWith : letter).length - 1) ? 'none' : 'inset'">
-              <div>
-                <ion-label>{{ species.name }}</ion-label>
-                <ion-note style="font-style: italic;">{{ species.nomenclature }}</ion-note>
-              </div>
-              <ion-checkbox color="primary" slot="start" [(ngModel)]="species.checked" (ionChange)="checkChanged()"></ion-checkbox>
-              <ion-icon style="z-index: 99;" slot="end" (click)="openSpeciesInfo(species.id, obj)" name="information-circle-outline"></ion-icon>
-            </ion-item>
+    <div class="scroll-container">
+      <ion-item-group>
+        <ng-container *ngFor="let obj of speciesClass; let i = index">
+          <ion-item-divider no-padding mode="ios" sticky style="background-color: gray; color: white; height: 40px;"
+            (click)="toggleClass(obj)">
+            <div style="width: 100%; height: 2px; background-color: black; position: absolute; top: 0; left: 0;"
+              *ngIf="i > 0"></div>
+            <ion-button class="ion-no-padding" slot="start" fill="clear" size="small" color="light">
+              <ion-icon slot="icon-only" size="large" [attr.name]="!obj.expanded ? 'add' : 'remove'" mode="ios">
+              </ion-icon>
+            </ion-button>
+            {{ obj.className }}
+            <ion-chip slot="end">
+              <ion-label color="light">
+                {{ obj.found }} / {{ obj.species.length }}
+              </ion-label>
+            </ion-chip>
+          </ion-item-divider>
+          <ng-container *ngFor="let letter of alphabet">
+            <ion-item-group *ngIf="obj.expanded && (obj.species | filterSpeciesByNameStartsWith : letter)">
+              <ion-item-divider style="background-color: lightgray; z-index: 0;" mode="ios">{{ letter }}
+              </ion-item-divider>
+              <ng-container
+                *ngFor="let species of (obj.species | filterSpeciesByNameStartsWith : letter); let j = index">
+                <ion-item
+                  [attr.lines]="(j == (obj.species | filterSpeciesByNameStartsWith : letter).length - 1) ? 'none' : 'inset'">
+                  <div>
+                    <ion-label>{{ species.name }}</ion-label>
+                    <ion-note style="font-style: italic;">{{ species.nomenclature }}</ion-note>
+                  </div>
+                  <ion-checkbox color="primary" slot="start" [(ngModel)]="species.checked" (ionChange)="checkChanged()">
+                  </ion-checkbox>
+                  <ion-icon style="z-index: 99;" slot="end" (click)="openSpeciesInfo(species.id, obj)"
+                    name="information-circle-outline"></ion-icon>
+                </ion-item>
+              </ng-container>
+            </ion-item-group>
           </ng-container>
-        </ion-item-group>
-      </ng-container>
-    </ng-container>
-  </ion-item-group>
+        </ng-container>
+      </ion-item-group>
+    </div>
+  </div>
 </ion-content>
