--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -1,7 +1,7 @@
 <tc-header pageName="Boardwalk Tour"></tc-header>
 
 <ion-content>
-  <div class="tc-tour-container">
+  <div class="content-container">
     <div style="padding-top: 10px; margin: auto; width: 100%; display: flex; justify-content: center;">
       <ion-chip color="primary" style="text-align: center;">
         <ion-label> {{ imgService.totalViewed }} / {{ imgService.total }} Signs Viewed </ion-label>
@@ -12,7 +12,7 @@
         Reset All
       </ion-button>
     </div>
-    <div class="signs-container">
+    <div class="scroll-container">
       <ion-grid>
         <ion-row>
           <!-- <ion-col size="4" *ngFor="let obj of signs">
