Added Toast Popups when No Internet Connection

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -26,11 +26,11 @@
     <ion-row>
       <ion-col>
         <div style="display: flex; flex-direction: row;">
-          <ion-button (click)="openUrl('http://www.southeastern.edu/acad_research/programs/turtle_cove/index.html')">
+          <ion-button (click)="buttonHandler('http://www.southeastern.edu/acad_research/programs/turtle_cove/index.html')">
             <ion-icon name="desktop"></ion-icon>
             <span>Our Website</span>
           </ion-button>
-          <ion-button (click)="openUrl('https://www.youtube-nocookie.com/embed/iqhW54bWwnw')">
+          <ion-button (click)="buttonHandler('https://www.youtube-nocookie.com/embed/iqhW54bWwnw')">
             <ion-icon name="film"></ion-icon>
             <span>Troubled Waters</span>
           </ion-button>
@@ -40,7 +40,7 @@
     <ion-row>
       <ion-col>
         <div style="display: flex; flex-direction: row;">
-          <ion-button style="margin-top: 0;" color="secondary" (click)="openUrl('https://www.southeastern.edu/alumni_donors/foundation/giving/tutlecove/index.html')">
+          <ion-button style="margin-top: 0;" color="secondary" (click)="buttonHandler('https://www.southeastern.edu/alumni_donors/foundation/giving/tutlecove/index.html')">
               Support Us!
           </ion-button>
         </div>
