Formatted install instructions

--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -7,11 +7,11 @@
         <ion-label> {{ imgService.totalViewed }} / {{ imgService.total }} Signs Viewed </ion-label>
       </ion-chip>
     </div>
-    <div style="display: flex; flex-direction: row;">
+    <!-- <div style="display: flex; flex-direction: row;"> -->
       <ion-button color="secondary" (click)="reset()">
         Reset All
       </ion-button>
-    </div>
+    <!-- </div> -->
     <div class="scroll-container">
       <ion-grid>
         <ion-row>
