--- a/src/app/pages/tc-tour/tc-tour.page.scss
+++ b/src/app/pages/tc-tour/tc-tour.page.scss
@@ -1,7 +1,9 @@
 ion-button {
-  flex-grow: 1;
-  flex-basis: 50%;
-  padding: 2px;
+  // flex-grow: 1;
+  // flex-basis: 50%;
+  flex-shrink: 0;
+  padding: 0 5px;
+  height: 40px;
 }
 
 .sign-button {
