--- a/src/app/shared/pwa-prompt/pwa-prompt.component.html
+++ b/src/app/shared/pwa-prompt/pwa-prompt.component.html
@@ -6,7 +6,27 @@
     <ion-icon slot="icon-only" name="close"></ion-icon>
   </ion-button>
   <ng-container *ngIf="platform.is('android')">
-    <ion-slides #slider pager="true" class="slides">
+    <div class="md-one-slide">
+      <h2>Install the Turtle Cove App</h2>
+      <div class="chrome-disclaimer">
+        The Google Chrome App is recommended for best results.
+      </div>
+      <div class="install-step">
+        <span>1.</span>
+        <ion-img src="assets/img/pwa-prompt/md-pwa-0.jpg"></ion-img>
+      </div>
+      <div class="install-step-text">Tap "Add TurtleCove to Home Screen" at the bottom of your screen.</div>
+      <div class="install-step">
+        <span>2.</span>
+        <ion-img src="assets/img/pwa-prompt/md-pwa-1.jpg"></ion-img>
+      </div>
+      <div class="install-step-text" style="margin-bottom: 0;">Tap "Add" on the next screen to install the Turtle Cove app.</div>
+      <ion-item class="dont-show-again" color="transparent" lines="none" no-padding>
+        <ion-label>Don't show this prompt again.</ion-label>
+        <ion-checkbox [(ngModel)]="dontShowAgain"></ion-checkbox>
+      </ion-item>
+    </div>
+    <!-- <ion-slides #slider pager="true" class="slides">
       <ion-slide>
         <div class="md-inner-slide">
           <span class="install-instructions" style="top: 15%;">
@@ -35,7 +55,7 @@
             <br>
             Tap "Add" on the next screen to install the Turtle Cove app.
             <br>
-            <!-- <span style="color: gray; font-size: 0.5em;">The Google Chrome App is recommended for best results.</span> -->
+            <!~~ <span style="color: gray; font-size: 0.5em;">The Google Chrome App is recommended for best results.</span> ~~>
           </span>
           <div class="nav-button-container">
             <ion-button (click)="slider.slidePrev()" size="small" class="slider-nav">
@@ -47,7 +67,7 @@
           </div>
         </div>
       </ion-slide>
-    </ion-slides>
+    </ion-slides> -->
   </ng-container>
   <ng-container *ngIf="platform.is('ios')">
     <!-- <ion-slides class="slides">
@@ -60,6 +80,10 @@
       </span>
       <div class="ios-footer">
         Just tap <ion-img src="assets/img/pwa-prompt/ios-share-icon.jpg"></ion-img> then "Add to Home Screen"
+        <ion-item  class="dont-show-again" color="transparent" lines="none">
+          <ion-label>Don't show this again.</ion-label>
+          <ion-checkbox [(ngModel)]="dontShowAgain"></ion-checkbox>
+        </ion-item>
       </div>
     </div>
     <!-- </ion-slide>
