--- a/src/app/shared/pwa-prompt/pwa-prompt.component.html
+++ b/src/app/shared/pwa-prompt/pwa-prompt.component.html
@@ -7,7 +7,7 @@
   </ion-button>
   <ng-container *ngIf="platform.is('android')">
     <div class="md-one-slide">
-      <h2>Install the Turtle Cove App</h2>
+      <h2>Install Turtle Cove App</h2>
       <div class="chrome-disclaimer">
         The Google Chrome App is recommended for best results.
       </div>
