Changed GW tour page title as per Dr. Moreau's request.

--- a/src/app/pages/gw-tour/gw-tour.page.html
+++ b/src/app/pages/gw-tour/gw-tour.page.html
@@ -1,4 +1,4 @@
-<tc-header pageName="Greenway Tour"></tc-header>
+<tc-header pageName="Manchac Greenway Tour"></tc-header>
 
 <ion-content>
   <!--
@@ -19,7 +19,7 @@
           <img src="assets/img/greenway.jpg" />
           <ion-card-header>
             <ion-card-subtitle>Manchac, LA</ion-card-subtitle>
-            <ion-card-title>Greenway</ion-card-title>
+            <ion-card-title>Manchac Greenway</ion-card-title>
           </ion-card-header>
           <ion-card-content>
               The Manchac Greenway provides the general public a look inside the natural
