--- a/src/app/shared/pwa-prompt/pwa-prompt.component.scss
+++ b/src/app/shared/pwa-prompt/pwa-prompt.component.scss
@@ -17,18 +17,6 @@ div.shade {
   width: 100%;
 }
 
-ion-button.md-close-button {
-  position: absolute;
-  top: 15vh;
-  right: 8vw;
-  height: 2em;
-  width: 2em;
-  ion-icon {
-    width: 100%;
-    height: 100%;
-  }
-}
-
 ion-button.ios-close-button {
   position: absolute;
   top: 15vh;
@@ -94,8 +82,9 @@ div.md-inner-slide {
 
 .md-one-slide {
   position: absolute;
-  top: 20%;
-  bottom: 25%;
+  height: 450px;
+  top: 50%;
+  transform: translateY(-50%);
   left: 0;
   right: 0;
   border-radius: 1em;
@@ -103,6 +92,17 @@ div.md-inner-slide {
   margin-right: 10%;
   background-color: white;
   text-align: center;
+  ion-button.md-close-button {
+    position: absolute;
+    top: -35px;
+    right: -5px;
+    height: 2em;
+    width: 2em;
+    ion-icon {
+      width: 100%;
+      height: 100%;
+    }
+  }
   .install-step {
     display: flex;
     * {
@@ -132,9 +132,12 @@ div.md-inner-slide {
     margin-right: auto;
   }
   .dont-show-again {
-    padding: 0 0 0 20px;
-    margin: 10px auto 0 auto;
+    padding-left: 20px;
     width: 90%;
+    position: absolute;
+    bottom: 5px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
