--- a/src/app/shared/pwa-prompt/pwa-prompt.component.html
+++ b/src/app/shared/pwa-prompt/pwa-prompt.component.html
@@ -3,7 +3,7 @@
   </div>
   <ng-container *ngIf="platform.is('android')">
     <div class="md-one-slide">
-      <ion-button no-padding (click)="hidePrompt()" [class]="platform.is('ios') ? 'ios-close-button' : 'md-close-button'"
+      <ion-button no-padding (click)="hidePrompt()" class="md-close-button"
         fill="clear" shape="round" size="small" color="light">
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
@@ -73,6 +73,10 @@
     <!-- <ion-slides class="slides">
       <ion-slide> -->
     <div class="ios-inner-slide">
+      <ion-button no-padding (click)="hidePrompt()" class="ios-close-button"
+        fill="clear" shape="round" size="small" color="light">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
       <span class="install-instructions">
         <ion-img src="assets/img/pwa-prompt/ios-pwa-icon.png" style="height: 4em;"></ion-img>
         <h1>Install Turtle Cove App</h1>
