--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <ion-app>
-  <div class="dev-banner" *ngIf="!prod">
-    Development Build
-  </div>
-  <ion-router-outlet [ngClass]="prod ? '' : 'dev-router'"></ion-router-outlet>
+  <tc-pwa-prompt></tc-pwa-prompt>
+  <ion-router-outlet></ion-router-outlet>
 </ion-app>
