--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -12,7 +12,10 @@
         Reset All
       </ion-button>
     <!-- </div> -->
-    <div class="scroll-container">
+    <div style="flex: 1 0 auto;" [ngStyle]="{ 'visibility' : loading ? 'visible' : 'hidden' }">
+      <ion-spinner color="primary"></ion-spinner>
+    </div>
+    <div class="scroll-container" [ngStyle]="{ 'visibility' : loading ? 'hidden' : 'visible' }">
       <ion-grid>
         <ion-row>
           <!-- <ion-col size="4" *ngFor="let obj of signs">
