--- a/src/app/pages/tc-tour/tc-tour.page.scss
+++ b/src/app/pages/tc-tour/tc-tour.page.scss
@@ -6,6 +6,17 @@ ion-button {
   height: 40px;
 }
 
+ion-spinner {
+  display: block;
+  margin: auto;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 200px;
+  left: 0;
+  right: 0;
+}
+
 .sign-button {
   height: 100%;
   background-color: white;
